kubernetes/istio/service2/service-2-delay-10s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2-delay-10s
spec:
  hosts:
  - service2
  http:
  - route:
    - destination:
        host: service2
        subset: v2
    fault:
      delay:
        percent: 100
        fixedDelay: 10s
