kubernetes/istio/service2/service-2-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service2-destination-rule
spec:
  host: service2
  subsets:
  - name: v2
    labels:
      version: v2
