kubernetes/istio/service2/service-2-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2-virtual-service
spec:
  hosts:
  - service2
  gateways:
  - virtual-service-gateway
  http:
  - route:
    - destination:
        host: service2
        subset: v2
